<resources>
    <string name="app_name">Enotice-App</string>
    <string name="auth_failed">Sorry, Sign-in Failed. Please Try Again.</string>
    <string name="empty_field">Sorry, Email/Password Fields are Empty.</string>
    <string name="auth_success">Welcome! Let us get started.</string>
    <string name="incorrect_email">Enter a valid Email Address.</string>
    <string name="incorrect_pass_length">Enter a Password of 8 or more characters.</string>
    <string name="reg_success">Registration Successful.</string>
    <string name="reg_fail">Registration Failed.</string>
    <string name="sign_out">Successfully Signed out</string>
    <string name="backpress">Press the back button once again to close the application.</string>
    <string name="title_1">Welcome</string>
    <string name="description_1">Welcome to the E-Notice Board App</string>
    <string name="post_approved">The notice has been APPROVED.</string>
    <string name="post_rejected">The notice has been REJECTED.</string>
    <string name="notice_upload_success">Notice upload SUCCESSFUL.</string>
    <string name="notice_upload_failed">Notice upload FAILED.</string>
    <string name="welcome_mech">Welcome to the Mechanical Department</string>
    <string name="welcome_cse">Welcome to the Computer Science Department</string>

    //Intro Strings
    <string name="title_material_metaphor">Authentic Material is the metaphor</string>
    <string name="title_material_bold">Bold, Consistent, Intentional, Real-time</string>
    <string name="title_material_motion">All Departments Connected</string>
    <string name="title_material_shadow">Light and Shadow, Online and Offline</string>

    <string name="description_material_metaphor">All new SCALABLE Authentication Levels. Secure access to respective accounts without conflicts in priority levels.</string>
    <string name="description_material_bold">Always On-the-go with REAL-TIME notice sync and consistent communication between Android Application, Web Application and LED Displays spread across the campus.</string>
    <string name="description_material_motion">Motion of Notices from one department to another on same priority level using CROSS-DEPARTMENT PORTAL.</string>
    <string name="description_material_shadow">Within the material environment, virtual lights illuminate the scene. OFFLINE-STORAGE Capabilities coming soon!</string>

    <string name="title_permissions">Requesting Permissions</string>
    <string name="description_permissions">This app needs the CAMERA and STORAGE permissions.</string>
    <string name="label_grant_permissions">Please grant the permissions before proceeding.</string>

    <string name="label_button_cta">Click me!</string>
    <string name="toast_button_cta">Hey, that\'s how custom CTA buttons work in material-intro!</string>

    <string name="title_fragment_login">This is a custom fragment.</string>
    <string name="hint_fake_username">Fake username</string>
    <string name="hint_fake_password">Fake password</string>
    <string name="label_fake_login">Fake login</string>
    <string name="label_fake_login_loading">Loading…</string>
    <string name="label_fake_login_success">Logged in ☺</string>
    <string name="label_fake_login_success_message">Successfully faked login.</string>
    <string name="label_fill_out_form">Please fill out the form before proceeding.</string>

    <string name="title_fragment_custom">Take off!</string>

    <string name="title_menu_reset_first_start">Reset "First start" flag</string>

    <string name="label_activity_finish">Nothing here…\n…just a demo how to create a splash screen intro.</string>

    <!-- Activity Titles -->
    <string name="pending_approvals">Pending Notice Approvals</string>
    <string name="nav_cross">Cross Department Portal</string>
    <string name="new_docs">New Document Notices</string>
    <string name="check_notice_status">Notice Status</string>

    <!-- Card Strings -->
    <string name="prof_name">Prof. Name</string>
    <string name="date_n_time">24 Sep 11:00am</string>
    <string name="notice_title">The title or description.</string>
    <string name="department">Computer Science and Engineering</string>
    <string name="designation">Assistant Professor</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_approve">Pending Approval</string>
    <string name="nav_archives">Notice Archive</string>
    <string name="nav_checkstatus">Check Notice Status</string>
    <string name="nav_documents">New Documents</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_User">View Users</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_other">Other Department</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- FAB Strings -->
    <string name="fab_add_notice">Add a Notice</string>
    <string name="fab_add_document">Add a Document</string>


    <string name="FCM_PREF">com.rcoem.enotice.enotice_app.fcm_pref</string>
    <string name="FCM_TOKEN">com.rcoem.enotice.enotice_app.fcm_token</string>
    <string name="title_activity_add_notice_tabbed">AddNoticeTabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Spinner Title -->
    <string name="spinner_title">Choose Notice Type</string>

</resources>
