<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="3dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_prof_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingTop="16dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="16dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/colorCardHeader"
                    android:textSize="14sp"
                    android:text="@string/prof_name"/>

                <LinearLayout
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="12dp"
                    android:layout_alignEnd="@id/card_prof_name"
                    android:background="@drawable/header_circle"></LinearLayout>


                <TextView
                    android:id="@+id/card_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="18dp"
                    android:paddingBottom="2dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorCardHeader"
                    android:textSize="12sp"
                    android:text="@string/date_n_time"
                    android:layout_toEndOf="@+id/card_prof_name" />

                <ImageView
                    android:id="@+id/overflow_card"
                    android:layout_width="14dp"
                    android:layout_height="18dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="right"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_more_vert_white_24dp"
                    android:tint="@color/colorCardHeader"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/card_thumbnail"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/notice"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/card_thumbnail"
                    android:text="@string/notice_title"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="100dp"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#000000"
                    android:textSize="18sp"/>



            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:paddingLeft="16dp"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/colorCardHeader"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>